; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_load.c_json_loadf.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_load.c_json_loadf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdin = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [8 x i8] c"<stdin>\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"<stream>\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"wrong arguments\00", align 1
@fgetc = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @json_loadf(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** @stdin, align 8
  %13 = icmp eq i32* %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %9, align 8
  br label %16

15:                                               ; preds = %3
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8** %9, align 8
  br label %16

16:                                               ; preds = %15, %14
  %17 = load i32*, i32** %7, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @jsonp_error_init(i32* %17, i8* %18)
  %20 = load i32*, i32** %5, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %25

22:                                               ; preds = %16
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @error_set(i32* %23, i32* null, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  store i32* null, i32** %4, align 8
  br label %39

25:                                               ; preds = %16
  %26 = load i64, i64* @fgetc, align 8
  %27 = trunc i64 %26 to i32
  %28 = load i64, i64* %6, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = call i64 @lex_init(i32* %8, i32 %27, i64 %28, i32* %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %25
  store i32* null, i32** %4, align 8
  br label %39

33:                                               ; preds = %25
  %34 = load i64, i64* %6, align 8
  %35 = load i32*, i32** %7, align 8
  %36 = call i32* @parse_json(i32* %8, i64 %34, i32* %35)
  store i32* %36, i32** %10, align 8
  %37 = call i32 @lex_close(i32* %8)
  %38 = load i32*, i32** %10, align 8
  store i32* %38, i32** %4, align 8
  br label %39

39:                                               ; preds = %33, %32, %22
  %40 = load i32*, i32** %4, align 8
  ret i32* %40
}

declare dso_local i32 @jsonp_error_init(i32*, i8*) #1

declare dso_local i32 @error_set(i32*, i32*, i8*) #1

declare dso_local i64 @lex_init(i32*, i32, i64, i32*) #1

declare dso_local i32* @parse_json(i32*, i64, i32*) #1

declare dso_local i32 @lex_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
